src/objects/UserPayInfo__c.object
<CustomObject>
    <description>EXPO購入の場合、決済用情報を格納する</description>
    <fields>
        <fullName>CardNo__c</fullName>
        <inlineHelpText>決済方法が「カード」の場合、該当項目に設定が必要</inlineHelpText>
        <label>カード番号</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>DeleteFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>該当項目はONに設定すると、該当決済情報が利用不可になる</inlineHelpText>
        <label>無効</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExpoUserInfoRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expoユーザ</label>
        <referenceTo>ExpoUser__c</referenceTo>
        <relationshipLabel>ユーザ決済情報</relationshipLabel>
        <relationshipName>ExpoUserPayInfo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PayDetail__c</fullName>
        <inlineHelpText>決済方法がカード以外の場合、関連の決済補足情報を入力する</inlineHelpText>
        <label>決済詳細</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PayType__c</fullName>
        <label>決済方法</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>売掛</fullName>
                </value>
                <value>
                    <fullName>カード</fullName>
                </value>
                <value>
                    <fullName>振込（事前入金）</fullName>
                </value>
                <value>
                    <fullName>代引</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UserRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>支払者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UserPayRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ユーザ決済情報</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>UP-{00000000}</displayFormat>
        <label>No#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CardNoInputCheck</fullName>
        <active>true</active>
        <description>決済方法が「カード」の場合、カード番号を入力必須</description>
        <errorConditionFormula>AND( ISPICKVAL( PayType__c , &quot;カード&quot;), LEN( CardNo__c  )= 0  )</errorConditionFormula>
        <errorDisplayField>CardNo__c</errorDisplayField>
        <errorMessage>カード番号を入力して下さい</errorMessage>
    </validationRules>
</CustomObject>